[package]
name = "microgate-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
microgate = { git = "https://github.com/Leviathan856/MicroGate" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
log = "0.4"
sysinfo = "0.30"
